--- a/index.html
+++ b/index.html
@@ -166,18 +166,18 @@
 
   <!-- Sessão de Newletter -->
   <section class="newsletter">
-    <div class="newletter-info">
+    <div class="newsletter-info">
       <h1>Newsletter</h1>
       <p>Assine e fique por dentro das novidades</p>
     </div>
-    <form action="">
+    <form action="" class="newsletter-form">
       <input type="text" placeholder="Seu e-mail">
       <button type="submit">Assinar</button>
     </form>
   </section>
 
   <!-- Rodapé -->
-  <footer>
+  <footer class="footer">
     <p>
       FlexBlog © Todos os direitos reservados.
     </p>
