--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
     </div>
 
     <div class="sobre-img">
-      <img src="./img/sobre1.jpg" alt="Sobre 1">
+      <img src="./img/sobre1.jpg" width="220" height="550" alt="Sobre 1">
     </div>
 
     <div class="sobre-img">
-      <img src="./img/sobre2.jpg" alt="Sobre 2">
+      <img src="./img/sobre2.jpg" width="220" height="275" alt="Sobre 2">
     </div>
   </section>
 
@@ -75,17 +75,17 @@
     <div class="produtos-container">
       <div class="produtos-item purple">
         <h2>Purple</h2>
-        <img src="./img/produtos1.jpg" alt="Produtos 1">
+        <img src="./img/produtos1.jpg" width="600" height="500" alt="Produtos 1">
       </div>
 
       <div class="produtos-item pink">
         <h2>Pink</h2>
-        <img src="./img/produtos2.jpg" alt="Produtos 2">
+        <img src="./img/produtos2.jpg" width="600" height="700" alt="Produtos 2">
       </div>
 
       <div class="produtos-item blue">
         <h2>Blue</h2>
-        <img src="./img/produtos3.jpg" alt="Produtos 3">
+        <img src="./img/produtos3.jpg" width="600" height="600" alt="Produtos 3">
       </div>
     </div>
   </section>
